[project]
name = "exotel-chatbot-dial-in"
version = "0.1.0"
description = "Exotel dial-in example for Pipecat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pipecat-ai[cartesia,deepgram,groq,local-smart-turn-v3,openai,runner,silero,webrtc,websocket]>=0.0.99",
  "pipecatcloud>=0.2.4",
]
